syntax="proto3";
package pms;

import "storage_msg_type.proto";

option optimize_for = LITE_RUNTIME;

// this is the msg for store msg to redis
message StorageMsg{
    EStorageType    mflag       = 1;
    sint32          result      = 2;
    string          userid      = 3; // userid
    string          msgid       = 4; // message id
    sint64          sequence    = 5; // sequence
    string          content     = 6; // message
}

message PackedStoreMsg{
    repeated    StorageMsg     msgs = 1;
}
